fixed bug in template $$$ var

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -145,7 +145,7 @@ if we are our experiences then we are both sides of them.
     </script>
 
 <script type="text/template" class="yote_template_definition" template_name="Log_in_box_admin">
-  <$$$$ var default_login_message This page requires a root login. $$$$>
+  <$$$ var default_login_message This page requires a root login. $$$>
   <$$ Log_in_box $$>
 </script>
 
