Updated admin page and objects to let the UI attach new fields to apps.

--- a/yote_root/html/rolo.html
+++ b/yote_root/html/rolo.html
@@ -72,7 +72,7 @@
 
           $.yote.init();
 
-          var app = $.yote.fetch_app( 'MadYote' );
+          var app = $.yote.fetch_app( 'Rolo' );
 
           try {
               var rolodex = app.get_rolodex();
